--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lint": "eslint .",
     "start:pro": "npm run build && node ./dist/index.js",
     "start": "ts-node-dev --inspect -- ./src/index.ts",
-    "seed:techCompanies": "ts-node ./src/seeds/techCompanies.seed.ts",
-    "seed:course-and-students": "ts-node ./src/seeds/courseAndStudents.seed.ts",
+    "seed:renfe": "ts-node ./src/seeds/renfe.seed.ts",
     "build": "tsc",
     "lint:fix": "eslint --fix .",
     "test": "echo \"Error: no test specified\" && exit 1",
