--- a/package.json
+++ b/package.json
@@ -29,35 +29,35 @@
   },
   "homepage": "https://github.com/daniruiz000/NODE-S6.2#readme",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.1",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.3.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.0",
+    "multer": "1.4.5-lts.1",
+    "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.16",
-    "validator": "^13.9.0"
+    "typeorm": "^0.3.17",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/mongoose": "^5.11.97",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^20.2.5",
-    "@types/validator": "^13.7.17",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "eslint": "^8.41.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
+    "@types/multer": "^1.4.8",
+    "@types/node": "^20.8.3",
+    "@types/validator": "^13.11.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "eslint": "^8.51.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   }
 }
